fix : 새식관리 삭제,채팅이력 수정,페이징 수정 (페이징 수정의 경우 card-header 하위 span이 모두 display:block이되어있어서 발생하는거여서 block을 뺐는데, 1차로 확인했을때는 깨지는 부분없었으나, 깨지는 부분 확인시 원복하고 다른방법 찾아보겠습니다.)

--- a/module-admin/src/main/resources/static/files/assets/css/style.css
+++ b/module-admin/src/main/resources/static/files/assets/css/style.css
@@ -214,7 +214,7 @@ p {
           display: inline-block; }
     .card .card-header span {
       color: #919aa3;
-      display: block;
+      /*display: block;*/
       font-size: 13px;
       margin-top: 5px; }
     .card .card-header + .card-block,
