--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -111,6 +111,7 @@
 <script type="text/javascript" th:src="@{/js/jquery.serializeObject.js}"></script>
 <script type="text/javascript" th:src="@{/js/adminCommon.js}"></script>
 <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
+<script type="text/javascript" th:src="@{/js/datatables-helper.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
