--- a/module-admin/src/main/resources/templates/templateManage/view.html
+++ b/module-admin/src/main/resources/templates/templateManage/view.html
@@ -277,7 +277,7 @@
 
             delete: function () {
                 if (this.selectedRow.length === 0) {
-                    alert('선택할 항목을 선택해 주십시오.');
+                    alert('삭제할 항목을 선택해 주십시오.');
                 } else {
                     if (confirm('삭제하시겠습니까?')) {
                         $.ajax({
