fix : 메시지관리(템플릿관리) 템플릿 수정 가능하게 변경

--- a/module-admin/src/main/resources/templates/templateManage/form.html
+++ b/module-admin/src/main/resources/templates/templateManage/form.html
@@ -108,10 +108,12 @@
             if(!confirm("수정하시겠습니까?")) return;
         }
 
+        $('#content').val(ckeditorApp.getEditorData('content'));
         const data = $("#templateManageForm").serialize();
+        console.log(data)
 
         $.ajax({
-            url : formId === '' ? "/templateManage/insertForm.do" : "/templateManage/updateForm.do",
+            url : formId === '' ? "/admin/templateManage/insertForm.do" : "/admin/templateManage/updateForm.do",
             type: 'POST',
             cache : false,
             dataType: 'json',
