fix : 관리자 게시판 수정

--- a/module-admin/src/main/resources/templates/managerBoard/form.html
+++ b/module-admin/src/main/resources/templates/managerBoard/form.html
@@ -78,6 +78,7 @@
             if(!confirm("수정하시겠습니까?")) return;
         }
 
+        $('#content').val(ckeditorApp.getEditorData('content'))
         const data = $("#managerNoticeBoardForm").serialize();
 
         $.ajax({
