--- a/module-admin/src/main/resources/templates/saesigManage/view.html
+++ b/module-admin/src/main/resources/templates/saesigManage/view.html
@@ -299,6 +299,8 @@
                     }
                 })
 
+                adoptListTable.off('select')
+                adoptListTable.off('deselect')
                 adoptListTable.on('select', function (e, dt, type, indexes) {
                     let rowData = adoptListTable.rows(indexes).data().toArray();
                     const selectedAdoptId = rowData[0].id;
